Removed quotes that were messing everything up

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,11 +7,11 @@ image:
 
 tasks:
   - name: Get a cluster
-    before: |
+    command: |
       atlas quickstart --default --force --skipSampleData --skipMongosh --clusterName "$GITPOD_WORKSPACE_ID" > /tmp/cluster-info
-      username=$(cat /tmp/cluster-info | grep Username | sed 's/.*:\s//')"
-      password=$(cat /tmp/cluster-info | grep Password | sed 's/.*:\s//')"
-      connectionstring=$(cat /tmp/cluster-info | grep string | sed 's/.*:\smongodb+srv:\/\///')"
+      username=$(cat /tmp/cluster-info | grep Username | sed 's/.*:\s//')
+      password=$(cat /tmp/cluster-info | grep Password | sed 's/.*:\s//')
+      connectionstring=$(cat /tmp/cluster-info | grep string | sed 's/.*:\smongodb+srv:\/\///')
       echo "MONGODB_CONNECTION_STRING=mongodb+srv://$username:$password@$connectionstring" > .env
 
 # atlas clusters delete "$GITPOD_WORKSPACE_ID" --force
