Removed unnecessary nvm lazy script

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,7 @@ tasks:
       username=$(cat /tmp/cluster-info | grep Username | sed 's/.*:\s//')
       password=$(cat /tmp/cluster-info | grep Password | sed 's/.*:\s//')
       connectionstring=$(cat /tmp/cluster-info | grep string | sed 's/.*:\smongodb+srv:\/\///')
+      rm /tmp/cluster-info
       echo "MONGODB_CONNECTION_STRING=mongodb+srv://$username:$password@$connectionstring" > .env
 
 # atlas clusters delete "$GITPOD_WORKSPACE_ID" --force
