--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Massimiliano Marcon <me@marcon.me>",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "dotenv": "^16.0.2",
+    "mongodb": "^4.9.1"
+  },
+  "devDependencies": {
+    "semistandard": "^16.0.1"
+  }
 }
