--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,7 +17,8 @@ tasks:
       rm /tmp/cluster-info
       MONGODB_CONNECTION_STRING="mongodb+srv://$username:$password@$connectionstring"
       echo "MONGODB_CONNECTION_STRING=${MONGODB_CONNECTION_STRING}" > .env
-      mongosh $MONGODB_CONNECTION_STRING patters/_load.js
+      sleep 5
+      mongosh $MONGODB_CONNECTION_STRING patterns/_load.js
 
 vscode:
   extensions:
